# construction_project_agentic

./: README.md  _config.yml  index.md  name.md  problems.md
_posts/: 2025-05-05-title.md
_problems/: problem1.md  problem2.md
building_data/Main/: building_metadata.json  floor_1.json
mcp_servers/: README.md  main.py  pyproject.toml  test_building_server.py
mcp_servers/building_mcp_server/: building.py  server.py
