[project]
name = "building"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.7.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.poe.tasks]
test = "pytest test_building_server.py -v -s"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v -s" 